Fix misaligned sync reset options radio button labels (#5587)
Fixes: #5580

--- a/scss/preferences/_sync_reset.scss
+++ b/scss/preferences/_sync_reset.scss
@@ -46,7 +46,10 @@
 #sync-reset-radiogroup > div radio .radio-label {
 	font-weight: 600;
 	font-size: 15px;
-	margin-bottom: .2em;
+}
+
+#sync-reset-radiogroup radio {
+	margin-block: 6px;
 }
 
 #sync-reset-radiogroup > div .sync-reset-option-desc {
@@ -56,10 +59,6 @@
 #sync-reset-radiogroup > div radio {
 	float: left;
 	margin-top: 1em;
-}
-
-#sync-reset-radiogroup > div radio .radio-check {
-	margin-inline-end: 1.05em;
 }
 
 #sync-reset-radiogroup > div[disabled] span {
